--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^16.4.7",
     "firebase-admin": "^13.2.0",
     "ioredis": "^5.6.1",
+    "moment-timezone": "^0.5.48",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
