--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,9 @@
     "noFallthroughCasesInSwitch": false,
     "resolveJsonModule": true,
     "esModuleInterop": true
-  }
+  },
+  "include": [
+  "src",
+  "firebase-service-account.json"
+]
 }
