--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,6 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false,
-    "resolveJsonModule": true,
-    "esModuleInterop": true
-  },
-  "include": [
-  "src",
-  "firebase-service-account.json"
-]
+    "noFallthroughCasesInSwitch": false
+  }
 }
