--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "moment-timezone": "^0.5.48",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
