--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cloudinary": "^2.6.0",
     "dotenv": "^16.4.7",
     "firebase-admin": "^13.2.0",
+    "googleapis": "^150.0.1",
     "ioredis": "^5.6.1",
     "moment-timezone": "^0.5.48",
     "mongoose": "^8.13.1",
