--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@huggingface/inference": "^4.7.1",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.1",
@@ -29,7 +30,9 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@pinecone-database/pinecone": "^6.1.2",
     "@types/cache-manager": "^5.0.0",
+    "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "cache-manager": "^6.4.2",
     "cache-manager-redis-store": "^3.0.1",
