--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@pinecone-database/pinecone": "^6.1.2",
+    "@qdrant/js-client-rest": "^1.15.1",
     "@types/cache-manager": "^5.0.0",
     "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
